--- a/src/css/sass/layout/_global.scss
+++ b/src/css/sass/layout/_global.scss
@@ -7,7 +7,7 @@ body {
   display: none;
   color: $primary-red;
   position: fixed;
-  bottom: 8px;
+  bottom: 12px;
   right: 8px;
   z-index: 99;
   padding: 15px;
